Cloud.Dotnet.Api.Template/deploy/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api_name
  namespace: api_name
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api_name
  template:
    metadata:
      labels:
        app: api_name
    spec:
      containers:
      - name: api_name
        image: rohitrustagi007/api_name:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
