Cloud.Dotnet.Api.Template/deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api_name
  namespace: api_name
spec:
  type: ClusterIP
  selector:
    app: api_name
  ports:
  - name: api_name
    protocol: TCP
    port: 80
    targetPort: 80
