Cloud.Dotnet.Api.Template/deploy/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api_name-ingress
  namespace: api_name
  annotations: 
      # kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/use-regex: 'true'
      nginx.ingress.kubernetes.io/proxy-body-size: 8m
      nginx.org/mergeable-ingress-type: "minion"
  labels:
    name: api_name-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: evolution.k8
    http:
      paths:
      - path: /uploads
        pathType: Prefix
        backend:
          service:
            name: api_name-api-cluster-ip
            port: 
              number: 80
